# agent_data

./: .gitignore  README.md  demo_agent.py  main.py  project_context.md
contracts/: StateAnchor.sol
ingestion/: pipeline.py
ingestion/sources/: base.py  polling.py  websocket.py
models/: state.py
processing/: transformer.py
sdk/: __init__.py  client.py  crypto.py  models.py
vnode/: Cargo.toml
vnode/src/: economics.rs  main.rs  simulation.rs
